2008-03-31  Alexander Larsson  <alexl@redhat.com>

        * gmemoryoutputstream.c:
	Clarify docs for g_memory_output_stream_get_size.
	Add g_memory_output_stream_get_data_size.

2008-03-30  Matthias Clasen  <mclasen@redhat.com>

	* gio.symbols:
	* gfile.c:
	* gfile.h: Add g_file_query_file_type convenience function
	to query the type of a file.  (#520715, Mikkel Kamstrup Erlandsen)

2008-03-30  Matthias Clasen  <mclasen@redhat.com>

	* gfileenumerator.c:
	* gfile.c: Fix some documentation typos.  (#524950, Rob Bradford)

2008-03-28  A. Walton  <awalton@svn.gnome.org>

	* giomodule.c (_g_io_modules_ensure_loaded):
	Adds GIO_EXTRA_MODULES environment variable support, closing bug 
	#523039.

2008-03-28  Alexander Larsson  <alexl@redhat.com>

        * gfile.c:
        (copy_stream_with_progress):
	Fix up last commit.
	
2008-03-28  Alexander Larsson  <alexl@redhat.com>

        * gfile.c:
        (copy_stream_with_progress):
        (file_copy_fallback):
	Fallback to g_file_query_info for source size
	if g_file_input_stream_query_info fails. (#524579)

2008-03-28  Alexander Larsson  <alexl@redhat.com>

	* glocalfile.c (g_local_file_move):
	Reuse old string instead of adding new one.

2008-03-28  Lin Ma  <Lin.Ma@Sun.COM>

	* fen/*.[hc]: still copyright issue. I hate copyright.

2008-03-27  Alexander Larsson  <alexl@redhat.com>

	* glocalfile.c (g_local_file_move):
	Return G_IO_ERROR_IS_DIRECTORY, not G_IO_ERROR_WOULD_MERGE when moving
	file over directory. This is according to the docs and what the move via
	copy+remove fallback does.

2008-03-27  Lin Ma  <Lin.Ma@Sun.COM>

	* fen/*.[hc]: Updated copyright.

2008-03-20  Lin Ma  <Lin.Ma@Sun.COM>

	* fen/fen-data.c: (fdata_adjust_changed): Removed a bad formatted msg.

2008-03-20  Lin Ma  <Lin.Ma@Sun.COM>

	* fen/fen-data.c: (process_events), (fdata_add_event): Fixed FEN does
	not emit attribute changed events when optimizing changed events.
	* fen/fen-helper.c, fen/fen-kernel.c: Added ifdef to default disable